--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "portscanner": "^1.0.0",
     "prompt": "^0.2.14",
     "readdir": "0.0.6",
-    "serve-favicon": "2.3.0"
+    "serve-favicon": "2.3.0",
+    "assets-frontend": "hmrc/assets-frontend"
   }
 }
